# movielens-recommender-system-01

./: .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  movie_reccomender_client.py  movie_recommender_client.py  pyproject.toml  startup.ps1
movie_reccommender_system/: main.py
movie_reccommender_system/basemodel_response_validator/: query_intent_parser_model.py
movie_reccommender_system/data_ingestor/: data_ingestor_main.py  data_loader.py  db_ingestor.py  db_ingestor_main.py  sqlite_ingestor.py  test_sqlite_file_old_version.py
movie_reccommender_system/db/: db_select.py
movie_reccommender_system/llm_client/: llm_client.py  llm_client_V2.py  llm_context_builder.py  llm_conversational_renderer.py  llm_edgecase_handling.py  llm_notes.txt  llm_preprocessing.py  llm_prompt_builder.py
movie_reccommender_system/query_processor/: query_processor_main.py  rule_based_parser.py  rules_based_parser.py
movie_reccommender_system/query_responder/: llm_client.py  llm_conversational_renderer.py  llm_edgecase_handling.py  llm_prompt_builder.py
movie_reccommender_system/response_basemodel_validator/: data_ingestor_model.py  llm_response_model.py  query_intent_parser_model.py  query_processor_model.py
movie_reccommender_system/utilities/: query_preprocessing.py
movie_recommender_syetem/llm_client/: system_prompt.py
router/: data_ingestor_router.py  hf_llama_inference_router.py  movie_recommender_sys_router.py  query_processor_router.py  query_response_router.py
tests/: data_ingestor_test.py
tests/test_data_ingestion/: test_data_ingestor_main.py  (+2 more)
(+8 files in other folders)
